Add type hierarchy data to plugin modules
This also renames BeanInfoService to PluginModule along with some pom simplifications discovered while debugging MCOMPILER-461.